// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/binary.proto";
import "schema/package.proto";
import "schema/volume.proto";

// TODO: rename to "Container".
message SidecarContainer {
    reserved 2, 6;

    string owner = 5;  // Package name.

    // Deprecated, use binary_ref
    string     binary     = 1;
    PackageRef binary_ref = 4;

    string name = 3;

    repeated Mount mount         = 7;
    BinaryConfig   binary_config = 8;
}

message ContainerExtension {
    // One of name, or package ref, must be set.
    string     name       = 1;
    PackageRef binary_ref = 2;

    repeated string args                 = 3;
    repeated BinaryConfig.EnvEntry env   = 4;
    repeated Mount                 mount = 5;
}